--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,10 @@ nav {
   height: 30px;
 }
 
+.item_opening {
+  height: 200px;
+}
+
 @media only screen and (min-width: 600px) {
   .container_opening {
     flex-direction: row;
