--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ a {
 }
 
 .container_about,
-.container_contact,
+.container_icon,
 .container_opening {
   background-color: beige;
 }
@@ -44,6 +44,11 @@ nav {
 .square {
   width: 30px;
   height: 30px;
+}
+
+.itemicon {
+  width: 50px;
+  height: 50px;
 }
 
 .item_opening1 {
