--- a/css/styles.css
+++ b/css/styles.css
@@ -46,9 +46,12 @@ nav {
   height: 30px;
 }
 
-.itemicon {
-  width: 50px;
-  height: 50px;
+.item_icon {
+  display: inline-block;
+  height: 3px;
+  margin: 55px;
+  margin-bottom: 10px;
+  justify-content: center;
 }
 
 .item_opening1 {
