--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,16 @@ nav {
   height: 200px;
 }
 
+p,
+h1,
+h2,
+h3,
+h4,
+h5 {
+  max-width: 600px;
+  margin: 0 auto;
+}
+
 @media only screen and (min-width: 600px) {
   .container_opening {
     flex-direction: row;
