--- a/css/styles.css
+++ b/css/styles.css
@@ -56,3 +56,12 @@ nav {
 .item_opening1 {
   height: 200px;
 }
+
+@media only screen and (min-width: 600px) {
+  .container_opening,
+  .container_welcome {
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+  }
+}
