--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,7 @@ nav {
 
 @media only screen and (min-width: 600px) {
   .container_opening,
-  .container_welcome {
+  .container_welcome .img-header {
     display: flex;
     flex-direction: column;
     justify-content: center;
