--- a/css/styles.css
+++ b/css/styles.css
@@ -57,14 +57,34 @@ nav {
   height: 200px;
 }
 
+@media (min-width: 600px) and (max-width: 1200px) {
+}
+
 @media only screen and (min-width: 600px) {
   .container_opening,
-  .container_welcome .img-header {
+  .container_welcome {
     display: flex;
     flex-direction: column;
     justify-content: center;
     margin: 0px;
     align-items: center;
     justify-content: space-around;
+  }
+}
+
+@media only screen and (min-with: 600px) {
+}
+
+@media (max-width: 480px) {
+  .p {
+    font-size: 16px;
+  }
+
+  .img-header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0px;
+    align-items: center;
   }
 }
