--- a/css/styles.css
+++ b/css/styles.css
@@ -62,13 +62,12 @@ nav {
 
 @media only screen and (min-width: 600px) {
   .container_opening,
-  .container_welcome {
+  .container_welcome .img-header {
     display: flex;
     flex-direction: column;
     justify-content: center;
     margin: 0px;
     align-items: center;
-    justify-content: space-around;
   }
 }
 
