--- a/css/styles.css
+++ b/css/styles.css
@@ -85,15 +85,18 @@ nav {
     font-size: 16px;
   }
 
-  main {
-    background-color: black;
-  }
-
-  .img-header .container_welcome {
+  .container_welcome {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     margin: 0px;
     align-items: center;
+    justify-content: space-around;
   }
+}
+
+.img-header img {
+  height: 400px;
+  display: inline-block;
+  justify-content: space-around;
+  align-items: center;
 }
