--- a/css/styles.css
+++ b/css/styles.css
@@ -91,3 +91,24 @@ nav {
   justify-content: space-around;
   align-items: center;
 }
+
+@media (min-width: 600px) and (max-width: 1200px) {
+}
+
+@media only screen and (min-with: 600px) {
+}
+
+@media (max-width: 480px) {
+  .p {
+    font-size: 16px;
+  }
+
+  .img-header,
+  .container_welcome {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0px;
+    align-items: center;
+  }
+}
