--- a/css/styles.css
+++ b/css/styles.css
@@ -71,6 +71,10 @@ nav {
   justify-content: center;
 }
 
+.item_opening1 {
+  height: 200px;
+}
+
 @media (min-width: 600px) and (max-width: 1200px) {
 }
 
