--- a/css/styles.css
+++ b/css/styles.css
@@ -155,3 +155,13 @@ nav a {
     margin-top: 10px;
   }
 }
+
+@media (min-width: 600px) {
+  nav {
+    display: inline-block;
+  }
+
+  .hamburger-menu {
+    display: none;
+  }
+}
