--- a/css/styles.css
+++ b/css/styles.css
@@ -112,6 +112,23 @@ a:hover {
   margin-top: 2px;
 }
 
+input {
+  width: 100%;
+  margin-top: 5px;
+  margin-right: 20x;
+  padding: 5px;
+  font-size: 16px;
+}
+
+textarea {
+  width: 100%;
+  height: 80px;
+  margin-top: 5px;
+  margin-right: 20x;
+  padding: 5px;
+  font-size: 16px;
+}
+
 button {
   background-color: var(--dark-blue);
   color: var(--white);
