--- a/css/styles.css
+++ b/css/styles.css
@@ -199,7 +199,8 @@ nav a {
   .container_welcome,
   .container_opening,
   .item_opening,
-  .container_about {
+  .container_about,
+  .container_form {
     display: flex;
     flex-direction: column;
     justify-content: center;
