--- a/css/styles.css
+++ b/css/styles.css
@@ -200,7 +200,8 @@ nav a {
   .container_opening,
   .item_opening,
   .container_about,
-  .containerForm {
+  .containerForm,
+  .containerMessage {
     display: flex;
     flex-direction: column;
     justify-content: center;
