--- a/css/styles.css
+++ b/css/styles.css
@@ -171,6 +171,7 @@ nav a {
 
 @media only screen and (min-with: 600px) {
   .container_welcome,
+  .container_contact,
   .containerForm,
   .containerMessage {
     display: flex;
@@ -179,7 +180,8 @@ nav a {
     justify-content: space-around;
   }
 }
-.img-header img {
+.img-header img,
+.contact1 {
   height: 400px;
   flex-direction: column;
   justify-content: space-around;
