--- a/css/styles.css
+++ b/css/styles.css
@@ -172,8 +172,7 @@ nav a {
 @media only screen and (min-with: 600px) {
   .container_welcome,
   .container_contact,
-  .containerForm,
-  .containerMessage {
+  .containerForm {
     display: flex;
     margin: 0px;
     align-items: center;
@@ -181,7 +180,8 @@ nav a {
   }
 }
 .img-header img,
-.contact1 {
+.contact1,
+.containerMessage {
   height: 400px;
   flex-direction: column;
   justify-content: space-around;
