--- a/css/styles.css
+++ b/css/styles.css
@@ -94,6 +94,7 @@ a:hover {
 
 .contact1 {
   width: 50%;
+  height: 80px;
   margin: 1rem;
   padding: 1rem;
   background-color: white;
@@ -122,6 +123,7 @@ input {
 
 textarea {
   width: 100%;
+  height: 80px;
   margin-top: 5px;
   margin-right: 20x;
   padding: 5px;
@@ -177,15 +179,12 @@ nav a {
     align-items: center;
     justify-content: space-around;
   }
-
-  .containerForm {
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-  }
 }
 .img-header img,
-.containerMessage {
+.contact1,
+.containerMessage,
+.containerForm,
+.character-count {
   height: 400px;
   flex-direction: column;
   justify-content: space-around;
