--- a/css/styles.css
+++ b/css/styles.css
@@ -173,7 +173,8 @@ nav a {
 @media only screen and (min-with: 600px) {
   .container_welcome,
   .container_contact,
-  .containerForm {
+  .containerForm,
+  .containerMessage {
     display: flex;
     margin: 0px;
     align-items: center;
