--- a/css/styles.css
+++ b/css/styles.css
@@ -114,6 +114,7 @@ a:hover {
 }
 
 input {
+  width: 100%;
   margin-top: 5px;
   margin-right: 20x;
   padding: 5px;
@@ -121,6 +122,7 @@ input {
 }
 
 textarea {
+  width: 100%;
   height: 80px;
   margin-top: 5px;
   margin-right: 20x;
