--- a/css/styles.css
+++ b/css/styles.css
@@ -169,11 +169,16 @@ nav a {
 .containerMessage,
 .containerForm,
 .character-count,
-.container_contact,
+.container_contact {
+  height: 400px;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
 .contact1,
 .containerForm,
 .containerMessage {
-  height: 400px;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
