--- a/css/styles.css
+++ b/css/styles.css
@@ -166,10 +166,7 @@ nav a {
 }
 .img-header img,
 .contact1,
-.containerMessage,
-.containerForm,
-.character-count,
-.container_contact {
+.containerMessage {
   height: 400px;
   flex-direction: column;
   justify-content: space-around;
