--- a/css/styles.css
+++ b/css/styles.css
@@ -164,9 +164,7 @@ nav a {
     justify-content: space-around;
   }
 }
-.img-header img,
-.contact1,
-.containerMessage {
+.img-header img {
   height: 400px;
   flex-direction: column;
   justify-content: space-around;
