--- a/css/styles.css
+++ b/css/styles.css
@@ -155,9 +155,7 @@ nav a {
 
 @media only screen and (min-with: 600px) {
   .container_welcome,
-  .container_contact,
-  .containerForm,
-  .containerMessage {
+  .container_contact {
     display: flex;
     margin: 0px;
     align-items: center;
