--- a/css/styles.css
+++ b/css/styles.css
@@ -131,6 +131,13 @@ nav a {
   background-color: white;
 }
 
+.containerMessagee {
+  width: 50%;
+  margin: 1rem;
+  padding: 1rem;
+  background-color: white;
+}
+
 @media (min-width: 600px) and (max-width: 1200px) {
 }
 
