--- a/css/styles.css
+++ b/css/styles.css
@@ -137,6 +137,13 @@ nav a {
   margin-top: 2px;
 }
 
+input {
+  width: 95%;
+  margin-top: 15px;
+  padding: 15px;
+  font-size: 16px;
+}
+
 @media (min-width: 600px) and (max-width: 1200px) {
 }
 
