--- a/css/styles.css
+++ b/css/styles.css
@@ -144,6 +144,10 @@ input {
   font-size: 16px;
 }
 
+.containerMessage {
+  width: 95%;
+}
+
 @media (min-width: 600px) and (max-width: 1200px) {
 }
 
