--- a/css/styles.css
+++ b/css/styles.css
@@ -194,6 +194,13 @@ input {
     align-items: center;
     margin-top: 10px;
   }
+
+  input {
+    width: 50%;
+    margin-top: 10px;
+    padding: 10px;
+    font-size: 16px;
+  }
 }
 
 @media (min-width: 600px) {
