--- a/css/styles.css
+++ b/css/styles.css
@@ -148,7 +148,10 @@ input {
   width: 95%;
 }
 
-@media only screen and (min-with: 600px) and (max-width: 1200px) {
+@media (min-width: 600px) and (max-width: 1200px) {
+}
+
+@media only screen and (min-with: 600px) {
   .container_welcome,
   .container_contact {
     display: flex;
@@ -162,6 +165,12 @@ input {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+}
+
+@media (min-width: 600px) and (max-width: 1200px) {
+}
+
+@media only screen and (min-with: 600px) {
 }
 
 @media (max-width: 480px) {
