--- a/css/styles.css
+++ b/css/styles.css
@@ -86,7 +86,7 @@ a:hover {
 .container_opening,
 .container_contact,
 .container_welcome .item_opening {
-  background-color: #eaeab4;
+  background-color: sandybrown;
 }
 
 nav,
