--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,11 @@ a:hover {
   align-items: center;
 }
 
+.img-header2 img {
+  height: 500px;
+  width: 500px;
+}
+
 .container_opening,
 .container_contact {
   display: flex;
@@ -86,7 +91,7 @@ a:hover {
 .container_opening,
 .container_contact,
 .container_welcome .item_opening {
-  background-color: sandybrown;
+  background-color: grey;
 }
 
 nav,
