--- a/css/styles.css
+++ b/css/styles.css
@@ -169,7 +169,10 @@ input {
   align-items: center;
 }
 .img-header2 img {
-  height: 500px;
+  height: 400px;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
 
 @media (max-width: 480px) {
