--- a/css/styles.css
+++ b/css/styles.css
@@ -181,7 +181,7 @@ input {
   }
 
   .img-header,
-  .container_welcome,
+  .img-header2 .container_welcome,
   .container_opening,
   .item_opening,
   .container_about,
