--- a/css/styles.css
+++ b/css/styles.css
@@ -4,13 +4,16 @@ body {
   padding: 0;
 }
 
+body {
+  font-family: "Roboto", Arial, sans-serif;
+}
+
 p,
 h1,
 h2,
 h3,
 h4,
 h5 {
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   max-width: 600px;
   margin: 0 auto;
 }
@@ -86,7 +89,7 @@ a:hover {
 .container_opening,
 .container_contact,
 .container_welcome .item_opening {
-  background-color: grey;
+  background-color: lightgrey;
 }
 
 nav,
