--- a/css/styles.css
+++ b/css/styles.css
@@ -55,7 +55,6 @@ a:hover {
   margin-right: auto;
   height: 400px;
   width: 50%;
-
   object-fit: cover;
 }
 
@@ -160,12 +159,14 @@ input {
     justify-content: space-around;
   }
 }
-.img-header img,
-.img-headerthis img {
+.img-header img {
   height: 400px;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+}
+.img-headerthis img {
+  width: 100%;
 }
 
 footer {
