--- a/css/styles.css
+++ b/css/styles.css
@@ -135,13 +135,13 @@ nav a {
   width: 50%;
   margin: 1rem;
   padding: 1rem;
-  background-color: white;
+  text-align: center;
 }
 
 .containerForm {
   width: 50%;
-  margin: 1rem;
-  padding: 1rem;
+  margin: 3rem;
+  padding: 2rem;
   background-color: white;
 }
 
@@ -152,14 +152,21 @@ nav a {
 }
 
 input {
-  width: 95%;
-  margin-top: 15px;
+  width: 90%;
+  margin-top: 10px;
+  padding: 5px;
+  margin-right: 15px;
   padding: 15px;
   font-size: 16px;
+  border-radius: 5px;
+  height: 10px;
 }
 
-.containerMessage {
-  width: 95%;
+textarea {
+  width: 94%;
+  height: 90px;
+  padding: 5px;
+  border-radius: 5px;
 }
 
 @media only screen and (min-with: 600px) and (max-width: 1200px) {
@@ -205,10 +212,11 @@ footer {
   }
 
   input {
-    width: 95%;
+    width: 100%;
     margin-top: 5px;
-    padding: 10px;
+    padding: 5px;
     font-size: 16px;
+    border-radius: 10px;
   }
 
   .img-headerthis img {
