--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,11 @@ a:hover {
   align-items: center;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 .img-headerthis img {
   display: block;
   margin-left: auto;
